# codex-pool

./: .dockerignore  .env.docker.example  .env.example  .env.prod.example  .gitignore  CONTRIBUTING.md  DEPLOY_PROD.md  DOCKER.md  Dockerfile.admin  Dockerfile.prod  LICENSE  README.md  README.zh-CN.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
deploy/mysql/: init.sql  production.cnf
deploy/mysql/migrations/: 002_api_keys_key_secret.sql  003_upstream_user_id.sql
scripts/: codex-pool.service.example  deploy-prod.sh  migrate_mysql_to_sqlite.py  pull-base-images.sh
src/codex_pool/: __init__.py  admin_app.py  admin_cli.py  combined_asgi.py
src/codex_pool/api/: deps.py
src/codex_pool/api/controllers/: api_key_controller.py  auth_controller.py  dashboard_controller.py  upstream_controller.py  upstream_oauth_controller.py
src/codex_pool/domain/: entities.py  schemas.py
src/codex_pool/infrastructure/: config_reload.py  database.py  http_client.py  metrics.py  oauth_store.py  orm_models.py  redis_client.py  schema_migrations.py  security.py  settings.py
src/codex_pool/proxy/: __init__.py  app.py  auth.py  billing.py  bootstrap.py  config.py  forward.py  reload.py  runtime_store.py  selector.py  upstream.py
src/codex_pool/repositories/: api_key_repository.py  settings_repository.py  upstream_repository.py  usage_repository.py  user_repository.py
src/codex_pool/services/: api_key_service.py  auth_service.py  avatar_service.py  chatgpt_credentials.py  chatgpt_oauth.py  chatgpt_usage.py  dashboard_service.py  upstream_service.py  upstream_test.py
web/: Dockerfile  Dockerfile.static  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
web/src/: api.js  main.js  router.js
web/src/components/: ApiEndpointBar.vue  ChatgptQuotaCompact.vue  ChatgptQuotaPanel.vue  CodexConfigGuideDialog.vue
web/src/composables/: useApiEndpoint.js  useApiKeySecret.js
web/src/styles/: theme.css
web/src/utils/: apiKeyCache.js  ccSwitchDeepLink.js  codexClientConfig.js
web/src/views/: ApiKeys.vue  Dashboard.vue  Layout.vue  Login.vue  Upstreams.vue
