[project]
name = "codex-pool"
version = "0.1.0"
description = "Codex CLI proxy pool with web admin — upstream accounts and API keys via admin UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.46",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "redis>=5.0",
    "fastapi>=0.115",
    "cryptography>=43.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
codex-pool-admin = "codex_pool.admin_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_pool"]
